@@ -1,3 +1,9 @@
+2009-04-14  Andreas Kupries  <andreask@activestate.com>
+
+	* pop3d.man: Updated documentation with example on how to use the
+	  option -socket to secure the server channel with TLS.
+	* pop3d.tcl: Fixed typos in comments.
+
 2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
